refactoring code api.py

--- a/python/config.ini
+++ b/python/config.ini
@@ -1,6 +1,10 @@
 [database]
 host = sre-bootcamp-selection-challenge.cabf3yhjqvmq.us-east-1.rds.amazonaws.com
-user_db = secret
+user = secret
 password = jOdznoyH6swQB9sTGdLUeeSrtejWkcw
 database = bootcamp_tht
-JWT_KEY='the-jwt-key'
+
+[app]
+debug = True
+host = 0.0.0.0
+port = 8000
