refactoring code api.py

--- a/python/config.ini
+++ b/python/config.ini
@@ -1,8 +1,8 @@
 [database]
-host = sre-bootcamp-selection-challenge.cabf3yhjqvmq.us-east-1.rds.amazonaws.com
+host = sre-bootcamp.czdpg2eovfhn.us-west-1.rds.amazonaws.com
+database = bootcamp_tht
 user = secret
 password = jOdznoyH6swQB9sTGdLUeeSrtejWkcw
-database = bootcamp_tht
 
 [app]
 debug = True
